Edit index.html and about.html

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -18,7 +18,7 @@
       <h2>Homepage</h2>
       <img
         src="./images/webcat.jpg"
-        style="margin-bottom: 2rem"
+        style="margin-bottom: 2rem; border-radius: 6px"
         height="250"
         width="250"
         alt="webcat"
