--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -11,6 +11,7 @@
       <h2>About</h2>
       <img
         src="https://i.pinimg.com/236x/24/2c/57/242c579690ea46f8debbc259946b0013.jpg"
+        style="border-radius: 6px"
         height="250"
         width="250"
         alt="webcat"
